# FunnyBones

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
.rustme/: config.ron  docs.md  header.md
examples/: skeleton.rs  toy.rs
main/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/FunnyBones/: all.html  enum.Mode.html  enum.ReadError.html  enum.SaveError.html  fn.add_bones_to_skeleton.html  fn.bone_editor.html  fn.bone_property_editor.html  fn.bones_editor.html  fn.main.html  fn.main_menu_window.html  fn.open_file.html  fn.save.html  fn.save_as.html  fn.skeleton_editor.html  fn.skeleton_window.html  index.html  sidebar-items.js  struct.ChangeAggregator.html  struct.EditingSkeleton.html  struct.SerializedBone.html  struct.SerializedSkeleton.html  struct.SkeletalBone.html
main/funnybones/: all.html  enum.BoneEnd.html  enum.BoneKind.html  index.html  sidebar-items.js  struct.Angle.html  struct.Bone.html  struct.BoneAxis.html  struct.BoneId.html  struct.Coordinate.html  struct.Joint.html  struct.JointId.html  struct.LabeledBoneKind.html  struct.Rotation.html  struct.Skeleton.html  struct.Vector.html
main/funnybones/animation/: enum.BoneProperty.html  enum.ChangeKind.html  enum.JointProperty.html  enum.PropertyUpdate.html  enum.Target.html  enum.Value.html  index.html  sidebar-items.js  struct.Animation.html  struct.Change.html  struct.Frame.html  struct.Keyframe.html  struct.RunningAnimation.html  struct.Timeline.html
main/funnybones/cushy/: index.html  sidebar-items.js
main/funnybones/cushy/skeleton_canvas/: enum.SkeletonMutation.html  enum.Target.html  index.html  sidebar-items.js  struct.SkeletonCanvas.html
main/funnybones/editor/: enum.ReadError.html  enum.SaveError.html  fn.skeleton_editor.html  index.html  sidebar-items.js  struct.EditingSkeleton.html  struct.SkeletonEditor.html
main/search.desc/FunnyBones/: FunnyBones-desc-0-.js
main/search.desc/funnybones/: funnybones-desc-0-.js
main/src/FunnyBones/: funnybones.rs.html
main/src/funnybones/: animation.rs.html  cushy.rs.html  editor.rs.html  lib.rs.html  serde.rs.html
src/: .crate-docs.md  animation.rs  cushy.rs  editor.rs  funnybones.rs  lib.rs  main.rs  serde.rs
src/cushy/: skeleton_canvas.rs
(+40 files in other folders)
