[package]
name = "funnybones"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "easing-function/serde"]

[[example]]
name = "skeleton"
required-features = ["cushy"]

[dependencies]
cushy = { git = "https://github.com/khonsulabs/cushy", optional = true }
serde = { version = "1.0.208", optional = true, features = ["derive"] }
easing-function = "0.1.0"

[dev-dependencies]
pot = "3.0.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
